objects/Sellable_Item_Product_Prerequisite__c.object
<CustomObject>
    <description>Object holding prerequisite data for the Sellable Item - Product object.  Links a Sellable Item - Product to another Sellable Item - Product that is a prerequisite for sale.</description>
    <fields>
        <fullName>Base_Item__c</fullName>
        <formula>Prerequisite_Product__r.Base_Item__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Base Item</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Check this box if the prerequisite is to be mandatory.  Uncheck this box if the prerequisite is to be optional/conditional.</description>
        <inlineHelpText>Check this box if the prerequisite is to be mandatory.  Uncheck this box if the prerequisite is to be optional/conditional.</inlineHelpText>
        <label>Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Part_Number__c</fullName>
        <formula>Prerequisite_Product__r.APN_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Part Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product_Name__c</fullName>
        <formula>Prerequisite_Product__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prerequisite Product Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prerequisite_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The Sellable Item - Product that is a prerequisite item.</description>
        <inlineHelpText>The Sellable Item - Product that is a prerequisite item.</inlineHelpText>
        <label>Prerequisite Product</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Prerequisites (Sellable Item - Product)</relationshipLabel>
        <relationshipName>Prerequisite_Sellable_Item</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Prerequisite_has_prerequisites__c</fullName>
        <formula>IF(Prerequisite_Product__r.Prerequisite_Count__c &gt; 0, &quot;Yes&quot;, &quot;No&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Prerequisite has prerequisites?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratios__c</fullName>
        <defaultValue>&quot;1:1&quot;</defaultValue>
        <label>Ratios</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sellable_Item_Product_Master__c</fullName>
        <description>The Sellable Item - Product for which this object is a prerequisite.</description>
        <inlineHelpText>The Sellable Item - Product for which this object is a prerequisite.</inlineHelpText>
        <label>Sellable Item - Product</label>
        <referenceTo>Sellable_Item_Product__c</referenceTo>
        <relationshipLabel>Prerequisites</relationshipLabel>
        <relationshipName>PrerequisiteMaster</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supported_Versions__c</fullName>
        <inlineHelpText>The supported versions of the prerequisite item.</inlineHelpText>
        <label>Supported Versions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>Version Specific</fullName>
                </value>
                <value>
                    <fullName>Or Higher</fullName>
                </value>
                <value>
                    <fullName>Or Earlier</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Prerequisite</label>
    <nameField>
        <displayFormat>PN-{0000}</displayFormat>
        <label>Prerequisite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Prerequisites</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>